Added possibility to read partial view-classes ==============================================
- Added new annotation DbPartialClass
- Added new persister-implementation PartialClassReader
- made AbstractPersister and AutomaticPersister ready for the new PartialClassReader (which extends AutomaticPersister)
- added new methods for registering and unregistering PartialClassReader-persisters (This type of Persister can be added/removed during runtime)
- added new method for unregistering Cursor-Loaders (The Cursor-Loaders of PartialClassReaders have to be unregistered again...)
- Changed interface ICursorLoader and all Implementations